Bug 550371 mozalloc failed to build on Solaris r=bsmedberg